--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -13,3 +13,10 @@ services:
     arii_ats.exec:
         class: Arii\ATSBundle\Service\AriiExec
         arguments: [ "%ATS%" ]
+
+    arii_ats.twig_string_loader:
+        class:        "Twig_Loader_String"
+        
+    arii_ats.twig_string:
+        class:        "%twig.class%"
+        arguments:    [@arii_ats.twig_string_loader ]
