--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -4,7 +4,7 @@ services:
 #        arguments: [@service_id, "plain_value", %parameter%]
     arii_ats.autosys:
         class: Arii\ATSBundle\Service\AriiAutosys 
-        arguments: [ %color_status% ]
+        arguments: [ "@arii_core.session" ]
         
     arii_ats.state:
         class: Arii\ATSBundle\Service\AriiState
