--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -437,6 +437,16 @@ arii_ATS_requests_summary:
     pattern:  /requests/summary.html
     defaults: { _controller: AriiATSBundle:Requests:summary }
 
+# --------------------------------------------------------------------------
+# Monitoring
+# --------------------------------------------------------------------------
+nagios_ATS_requests_result:
+    pattern:  /{output}/{dbname}/{req}
+    defaults: { _controller: AriiATSBundle:Requests:result }
+    requirements:
+        output: nagios
+    
+
 #--------------------------------------------------------------------
 # Templates
 #--------------------------------------------------------------------
