--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -4,11 +4,11 @@ services:
 #        arguments: [@service_id, "plain_value", %parameter%]
     arii_ats.autosys:
         class: Arii\ATSBundle\Service\AriiAutosys 
-        arguments: [ "@arii_core.session" ]
+        arguments: [ "@arii_core.portal" ]
         
     arii_ats.state:
         class: Arii\ATSBundle\Service\AriiState
-        arguments: ["@arii_core.dhtmlx", "@arii_core.sql", "@arii_core.date", "@arii_core.tools"]
+        arguments: [ "@arii_core.dhtmlx", "@arii_core.sql", "@arii_core.date", "@arii_core.tools"]
 
     arii_ats.exec:
         class: Arii\ATSBundle\Service\AriiExec
