--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -434,8 +434,9 @@ xml_ATS_instructions_grid_toolbar:
 # --------------------------------------------------------------------------
 arii_ATS_generate:
     path:  /generate
-    defaults: { _controller: AriiATSBundle:Graphviz:generate }
-
+#    defaults: { _controller: AriiATSBundle:Graphviz:generate }
+    defaults: { _controller: AriiATSBundle:Graph:generate }
+    
 # --------------------------------------------------------------------------
 # Logs
 # --------------------------------------------------------------------------
