--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "AriiPortal/ATSBundle",
+    "name": "arii/ats",
     "description": "Module Autosys pour Arii",
     "authors": [
         {
