MAJ avant insertion dans Arii Edition

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "arii/ats",
+    "name": "ariiportal/ats",
     "description": "Module Autosys pour Arii",
     "authors": [
         {
